# service-fabric-metadata

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  ThirdPartyNotices.txt  build.rs
.github/workflows/: build.yaml
.metadata/: FabricTransport.cpp  autoTypes.json  emitter.settings.rsp  generate.proj  scraper.header.txt
.metadata/Partitions/FabricClient/: settings.rsp
.metadata/Partitions/FabricCommon/: settings.rsp
.metadata/Partitions/FabricRuntime/: settings.rsp
.metadata/Partitions/FabricTransport/: main.cpp
.metadata/Partitions/FabricTypes/: settings.rsp
.metadata_internal/: emitter.settings.rsp  generate.proj  scraper.header.txt
.metadata_internal/Partitions/FabricTransport/: settings.rsp
.windows/winmd/: Microsoft.ServiceFabric.Internal.winmd  Microsoft.ServiceFabric.winmd
cmake/: ImportFabric.cmake  clang-format.cmake  fetch_get_files.cmake  fetch_get_internal_files.cmake
docs/: Development.md
importlibs/: FabricClient.lib  FabricCommon.lib  FabricResources.lib  FabricRuntime.lib  FabricServiceCommunication.lib  FabricTransport.lib
scripts/: gen_cpp.ps1
src/: CMakeLists.txt  lib.rs
src/fabric/: CMakeLists.txt
src/fabric/include/: FabricClient.h  FabricCommon.h  FabricRuntime.h  FabricTypes.h
src/fabric/src/: FabricClient_i.c  FabricCommon_i.c  FabricRuntime_i.c  FabricTypes_i.c
src/fabric_internal/: CMakeLists.txt
src/fabric_internal/include/: FabricTypes_.h  fabricservicecommunication_.h  fabrictransport_.h
src/fabric_internal/src/: FabricTypes__i.c  fabricservicecommunication__i.c  fabrictransport__i.c
