[package]
name = "mssf-metadata"
description = "mssf-metadata provides linking libs for Microsoft Service Fabric on windows."
readme = "README.md"
repository = "https://github.com/Azure/service-fabric-metadata"
homepage = "https://learn.microsoft.com/en-us/azure/service-fabric/service-fabric-overview"
documentation = "https://learn.microsoft.com/en-us/azure/service-fabric/"
version = "0.0.1"
edition = "2021"
build = "build.rs"
license = "MIT"
include = [
    "**/*.rs",
    "importlibs/",
    "Cargo.toml",
]

# This is a dummy pkg to host fabric import libs
# import libs are checkin in /importlibs dir. build.rs will propagate this link search dir
# to downstream targets.

[dependencies]
